--- a/QuiGas/package.json
+++ b/QuiGas/package.json
@@ -25,7 +25,7 @@
         "@types/googlemaps": "3.39.3",
         "animate.css": "3.7.0",
         "arrive": "2.4.1",
-        "bootstrap": "3.3.7",
+        "bootstrap": "^3.3.7",
         "bootstrap-notify": "3.1.3",
         "chartist": "0.11.0",
         "core-js": "2.6.9",
@@ -40,6 +40,7 @@
         "@angular-devkit/build-angular": "0.900.6",
         "@angular/cli": "9.0.6",
         "@angular/compiler-cli": "9.0.6",
+        "@schematics/angular": "^10.0.3",
         "@types/jasmine": "3.5.9",
         "@types/node": "13.9.0",
         "codelyzer": "5.2.1",
@@ -48,9 +49,9 @@
         "karma": "4.4.1",
         "karma-chrome-launcher": "3.1.0",
         "karma-cli": "2.0.0",
+        "karma-coverage-istanbul-reporter": "2.1.1",
         "karma-jasmine": "3.1.1",
         "karma-jasmine-html-reporter": "1.5.2",
-        "karma-coverage-istanbul-reporter": "2.1.1",
         "protractor": "5.4.3",
         "ts-node": "8.6.2",
         "tslint": "6.1.0",
